Resolves: tdf#106105 duplicate marks not merged when they are at the start

i.e. initial mark isn't compared which goes on to crash under some circumstances

regression from...

commit aa11e7bae89fe691f914abb27d1c4a03d27a7ee5
Date:   Tue Aug 14 16:31:53 2012 +0200

    Convert maList in SdrMarkList from Container to std::vector

Change-Id: Ib3e9b02aad91c14971656af171d48154507da127
(cherry picked from commit 35bb22c1a834b306c910cb065bc006818c9fa9b3)